# root

cmake/modules/: FindFFTW.cmake  FindKFR.cmake  RootBuildOptions.cmake  RootConfiguration.cmake  SearchInstalledSoftware.cmake
math/kfr/: CMakeLists.txt
math/kfr/doc/: index.txt
net/auth/: CMakeLists.txt
net/auth/src/: DaemonUtils.cxx
net/rpdutils/: CMakeLists.txt
net/rpdutils/src/: rpdutils.cxx
